# example-node-cpp

./: README.md  addon.cpp  binding.gyp  index.js  package-lock.json  package.json  wrapper.cpp  wrapper.h
case-1/: README.md
case-1/lib/: binding.ts
case-1/src/: example_node_cpp.cc  example_node_cpp.h
case-1/test/: test_binding.js
case-2/: README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
case-2/lib/: binding.d.ts  binding.js  binding.ts  global.d.ts
case-2/src/: case_2.cc
case-2/test/: binding.spec.ts  test_binding.js  test_binding.ts
case-3/: CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
case-3/lib/: binding.js  binding.ts
case-3/src/: CMakeLists.txt  case_3.cc  concat.cc
case-3/src/binding/: CMakeLists.txt  case_3.cc
case-3/src/lib/: CMakeLists.txt  concat.hpp
case-3/test/: test_binding.js  test_binding.ts
case-3/test_cpp/: CMakeLists.txt  main.cpp
lib/: binding.js  binding.ts
src/: example_node_cpp.cc  example_node_cpp.h
test/: test_binding.js
